compiler/tests/fail/typing/x86-64/conditional_not_bool.jazz
export fn main () -> reg u64 {
  reg u64 x = 0;
  x = x ? x : x;
  return x;
}
